add url and bold name in pubs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   volume={171},
   pages={31--41},
   year={2017},
-  abbr={Neuropsychology},
+  abbr={Neuropsychology of language | Epilepsy},
   publisher={Academic Press}
 }
 
@@ -120,7 +120,7 @@
   number={9},
   pages={3242--3259},
   year={2023},
-  abbr={Biomarkers | Causal inference},
+  abbr={Biomarkers | Causal inference | Psychiatry},
   publisher={American Speech-Language-Hearing Association}
 }
 
@@ -128,7 +128,7 @@
   title={Detecting suicide risk among US Servicemembers and Veterans: A deep learning approach using social media data},
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
-  abbr={Suicide | Deep learning},
+  abbr={Suicide | Deep learning | Social media},
   year={2024}
 }
 
@@ -136,6 +136,7 @@
   title={Speech and text psychometrics: Identifying suicide risk factors with large language models and acoustic networks},
   author={Low, Daniel Mark},
   year={2024},
+  abbr={NLP | LLMs | Speech | Suicide},
   school={Harvard University}
 }
 
@@ -147,6 +148,7 @@
   number={5},
   pages={e0000516},
   year={2024},
+  abbr={Voice biomarkers | Explainable machine learning},
   publisher={Public Library of Science San Francisco, CA USA}
 }
 
@@ -155,6 +157,7 @@
   author={Abdou, Mostafal and Kulmizev, Artur and Hill, Felix and Low, Daniel M and Sogaard, Anders},
   booktitle={EMNLP},
   pages={5838--5845},
+  abbr={Explainable machine learning | NLP},
   year={2019}
 }
 
@@ -163,6 +166,7 @@
   author={Low, Daniel M and Zuromski, Kelly L and Kessler, Daniel and Ghosh, Satrajit S and Nock, Matthew and Dempsey, Walter},
   booktitle={Proceedings of the First Workshop on Causal Inference and NLP at EMNLP},
   pages={95--103},
+  abbr={NLP | Causal inference | Suicide | Social media},
   year={2021}
 }
 
@@ -170,6 +174,7 @@
   title={Explaining Deep Learning Embeddings for Speech Emotion Recognition by Predicting Interpretable Acoustic Features},
   author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
   journal={arXiv preprint arXiv:2409.09511},
+  abbr={Speech biomarkers | Explainable machine learning},
   year={2024}
 }
 
@@ -177,6 +182,7 @@
   title={Using large language models to create lexicons for interpretable text models with high content validity: the Suicide Risk Lexicon},
   author={Low, Daniel M and Rankin, Osiris and Coppersmith, Daniel DL and Bentley, Kate H and Nock, Matthew K and Ghosh, Satrajit S},
   year={2024},
+  abbr={LLMs | NLP | Speech & Acoustics | Psychometrics},
   publisher={PsyArXiv}
 }
 
@@ -187,6 +193,7 @@
   volume={27},
   pages={e63343},
   year={2025},
+  abbr={Reproducibility | Survey data},
   publisher={JMIR Publications Toronto, Canada}
 }
 
@@ -194,7 +201,8 @@
   title={Text Psychometrics: Assessing Psychological Constructs in Text Using Natural Language Processing},
   author={Low, Daniel M. and Mair, Patrick and Nock, Matthew K. and Ghosh, Satrajit S.},
   journal={PsyArXiv},
-  url={https://osf.io/preprints/psyarxiv/9rdux\_v3},
+  url={https://osf.io/preprints/psyarxiv/9rdux\_v4},
+  abbr={LLMs | NLP | Psychometrics},
   year={2025}
 }
 
@@ -203,5 +211,6 @@
   author={Herrmann, Felipe M and Jones, Grant and Low, Daniel M and Zech, James M and Carhart-Harris, Robin L and Kettner, Hannes},
   journal={Journal of Psychiatric Research},
   year={2025},
+  abbr={Psychedelics | Mindfulness},
   publisher={Elsevier}
 }
