--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
   pages={31--41},
   year={2017},
   abbr={Neuropsychology of language | Epilepsy},
+  url={https://www.sciencedirect.com/science/article/abs/pii/S0093934X16300177},
   publisher={Academic Press}
 }
 
@@ -22,7 +23,8 @@
   number={1},
   pages={96--116},
   abbr={Speech | Machine learning},
-  year={2020}
+  year={2020},
+  url={https://onlinelibrary.wiley.com/doi/10.1002/lio2.363}
 }
 
 @article{torrente2021sooner,
@@ -33,6 +35,7 @@
   pages={495--503},
   year={2021},
   abbr={Mental health},
+  url={https://pmc.ncbi.nlm.nih.gov/articles/PMC8529255/},
   publisher={Elsevier}
 }
 
@@ -43,6 +46,7 @@
   volume={5},
   number={3},
   pages={34},
+  url={https://www.mdpi.com/2226-471X/5/3/34},
   abbr={Neuropsychology},
   year={2020}
 }
@@ -54,7 +58,8 @@
   volume={22},
   number={10},
   abbr={NLP | Social media},
-  year={2020}
+  year={2020},
+  url={https://www.jmir.org/2020/10/e22635}
 }
 
 @article{torrente2022psychological,
@@ -65,7 +70,7 @@
   number={1},
   pages={e10},
   year={2022},
-  abbr={Public health},
+  abbr={Public health | Mental health},
   publisher={Cambridge University Press}
 }
 
@@ -77,7 +82,8 @@
   pages={235--241},
   year={2022},
   abbr={Speech | Machine learning},
-  publisher={IEEE}
+  publisher={IEEE},
+  url={https://ieeexplore.ieee.org/document/9713955}
 }
 
 @article{acunzo2022deep,
@@ -88,7 +94,8 @@
   pages={119005},
   year={2022},
   abbr={Neuroimaging | Deep learning},
-  publisher={Academic Press}
+  publisher={Academic Press},
+  url={https://www.sciencedirect.com/science/article/pii/S1053811922001343?via%3Dihub}
 }
 
 @article{torrente2022risk,
@@ -97,19 +104,21 @@
   journal={Frontiers in Psychology},
   volume={13},
   abbr={Public health | Social psychology},
-  year={2022}
+  year={2022},
+  url={https://www.frontiersin.org/journals/psychology/articles/10.3389/fpsyg.2022.900684/full}
 }
 
 @article{talkar2023dissociating,
   title={Dissociating COVID-19 from other respiratory infections based on acoustic, motor coordination, and phonemic patterns},
-  author={Talkar, Tanya and Low, Daniel M and Simpkin, Andrew J and Ghosh, Satrajit and O’Keeffe, Derek T and Quatieri, Thomas F},
+  author={Talkar, Tanya and Low, Daniel M and Simpkin, Andrew J and Ghosh, Satrajit and O'Keeffe, Derek T and Quatieri, Thomas F},
   journal={Scientific Reports},
   volume={13},
   number={1},
   pages={1567},
   year={2023},
   abbr={Speech | Machine learning},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  url={https://www.nature.com/articles/s41598-023-27934-4}
 }
 
 @article{fusaroli2023identifying,
@@ -121,7 +130,8 @@
   pages={3242--3259},
   year={2023},
   abbr={Biomarkers | Causal inference | Psychiatry},
-  publisher={American Speech-Language-Hearing Association}
+  publisher={American Speech-Language-Hearing Association},
+  url={https://pubs.asha.org/doi/10.1044/2023_JSLHR-22-00667}
 }
 
 @article{zuromski2024detecting,
@@ -129,6 +139,7 @@
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
   abbr={Suicide | Deep learning | Social media},
+  url={https://pmc.ncbi.nlm.nih.gov/articles/PMC12315600/}
   year={2024}
 }
 
@@ -149,7 +160,8 @@
   pages={e0000516},
   year={2024},
   abbr={Voice biomarkers | Explainable machine learning},
-  publisher={Public Library of Science San Francisco, CA USA}
+  publisher={Public Library of Science San Francisco, CA USA},
+  url={https://journals.plos.org/digitalhealth/article?id=10.1371/journal.pdig.0000516}
 }
 
 @inproceedings{abdou2019higher,
@@ -158,6 +170,7 @@
   booktitle={EMNLP},
   pages={5838--5845},
   abbr={Explainable machine learning | NLP},
+  url={https://aclanthology.org/D19-1593/#:~:text=Higher%2Dorder%20Comparisons%20of%20Sentence%20Encoder%20Representations,-Mostafa%20Abdou%2C%20Artur&text=Representational%20Similarity%20Analysis%20(RSA)%20is,fMRI%2C%20electrophysiology%2C%20behavior).}
   year={2019}
 }
 
@@ -173,8 +186,9 @@
 @article{dixit2024explaining,
   title={Explaining Deep Learning Embeddings for Speech Emotion Recognition by Predicting Interpretable Acoustic Features},
   author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
-  journal={arXiv preprint arXiv:2409.09511},
+  journal={arXiv},
   abbr={Speech biomarkers | Explainable machine learning},
+  url={https://arxiv.org/abs/2409.09511}
   year={2024}
 }
 
@@ -183,6 +197,7 @@
   author={Low, Daniel M and Rankin, Osiris and Coppersmith, Daniel DL and Bentley, Kate H and Nock, Matthew K and Ghosh, Satrajit S},
   year={2024},
   abbr={LLMs | NLP | Speech & Acoustics | Psychometrics},
+  url={https://osf.io/preprints/psyarxiv/vf2bc_v3}
   publisher={PsyArXiv}
 }
 
@@ -194,6 +209,7 @@
   pages={e63343},
   year={2025},
   abbr={Reproducibility | Survey data},
+  url={https://www.jmir.org/2025/1/e63343}
   publisher={JMIR Publications Toronto, Canada}
 }
 
@@ -212,5 +228,6 @@
   journal={Journal of Psychiatric Research},
   year={2025},
   abbr={Psychedelics | Mindfulness},
+  url={https://linkinghub.elsevier.com/retrieve/pii/S0022-3956(25)00520-5}
   publisher={Elsevier}
 }
