--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -139,7 +139,7 @@
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
   abbr={Suicide | Deep learning | Social media},
-  url={https://pmc.ncbi.nlm.nih.gov/articles/PMC12315600/}
+  url={https://pmc.ncbi.nlm.nih.gov/articles/PMC12315600/},
   year={2024}
 }
 
@@ -170,7 +170,7 @@
   booktitle={EMNLP},
   pages={5838--5845},
   abbr={Explainable machine learning | NLP},
-  url={https://aclanthology.org/D19-1593/#:~:text=Higher%2Dorder%20Comparisons%20of%20Sentence%20Encoder%20Representations,-Mostafa%20Abdou%2C%20Artur&text=Representational%20Similarity%20Analysis%20(RSA)%20is,fMRI%2C%20electrophysiology%2C%20behavior).}
+  url={https://aclanthology.org/D19-1593/#:~:text=Higher%2Dorder%20Comparisons%20of%20Sentence%20Encoder%20Representations,-Mostafa%20Abdou%2C%20Artur&text=Representational%20Similarity%20Analysis%20(RSA)%20is,fMRI%2C%20electrophysiology%2C%20behavior).},
   year={2019}
 }
 
@@ -188,7 +188,7 @@
   author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
   journal={arXiv},
   abbr={Speech biomarkers | Explainable machine learning},
-  url={https://arxiv.org/abs/2409.09511}
+  url={https://arxiv.org/abs/2409.09511},
   year={2024}
 }
 
@@ -197,7 +197,7 @@
   author={Low, Daniel M and Rankin, Osiris and Coppersmith, Daniel DL and Bentley, Kate H and Nock, Matthew K and Ghosh, Satrajit S},
   year={2024},
   abbr={LLMs | NLP | Speech & Acoustics | Psychometrics},
-  url={https://osf.io/preprints/psyarxiv/vf2bc_v3}
+  url={https://osf.io/preprints/psyarxiv/vf2bc_v3},
   publisher={PsyArXiv}
 }
 
@@ -209,7 +209,7 @@
   pages={e63343},
   year={2025},
   abbr={Reproducibility | Survey data},
-  url={https://www.jmir.org/2025/1/e63343}
+  url={https://www.jmir.org/2025/1/e63343},
   publisher={JMIR Publications Toronto, Canada}
 }
 
@@ -228,6 +228,6 @@
   journal={Journal of Psychiatric Research},
   year={2025},
   abbr={Psychedelics | Mindfulness},
-  url={https://linkinghub.elsevier.com/retrieve/pii/S0022-3956(25)00520-5}
+  url={https://linkinghub.elsevier.com/retrieve/pii/S0022-3956(25)00520-5},
   publisher={Elsevier}
 }
